--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,6 @@ scripts/virtuoso_isql_exec_script.sh
 scripts/virtuoso_isql_exec_script_varius_file.sh
 scripts/virtuoso_isql_exec_script_old.sh
 scripts/feature_extraction_script/functions/__pycache__
+scripts/feature_extraction_script/returns
 scripts/test/__pycache__
+scripts/csv_files
