Actualización extracción de características: Rework de TreeFormat, Parte 12: - Cambios Generales en varias funciones (GeneralFeaturesFromOperators, SetTripleType, etc.) - Se detecto que el extractor lee mal triples con * u otras concatenaciones, se está comenzando a desarrollar GetAllEqOperation para solucionarl

--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,10 @@ scripts/virtuoso_isql_exec_script_varius_file.sh
 scripts/virtuoso_isql_exec_script_old.sh
 scripts/feature_extraction_script/functions/__pycache__
 scripts/feature_extraction_script/returns
+scripts/feature_extraction_script/returns2
+scripts/feature_extraction_script/returns3
+scripts/feature_extraction_script/returns4
+scripts/feature_extraction_script/returns5
+scripts/feature_extraction_script/test.py
 scripts/test/__pycache__
 scripts/csv_files
