--- a/.gitignore
+++ b/.gitignore
@@ -63,5 +63,6 @@ scripts/feature_extraction_script/returns3
 scripts/feature_extraction_script/returns4
 scripts/feature_extraction_script/returns5
 scripts/feature_extraction_script/test.py
+scripts/feature_extraction_script/functions/test.py
 scripts/test/__pycache__
 scripts/csv_files
