.gitignore is now working

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,11 @@ docs/_build/
 .idea
 dataset
 scripts/outputs
+scripts/outputs2
+scripts/outputs3
+scripts/outputs_old
+scripts/outputs_old2
+scripts/outputs_old3
 scripts/virtuoso_load_ttls_from_folders.sh
 scripts/virtuoso_isql_exec_script.sh
 scripts/virtuoso_isql_exec_script_varius_file.sh
