--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ scripts/virtuoso_isql_exec_script_varius_file.sh
 scripts/virtuoso_isql_exec_script_old.sh
 scripts/feature_extraction_script/functions/__pycache__
 scripts/feature_extraction_script/returns
+scripts/feature_extraction_script/returns_old
 scripts/feature_extraction_script/returns2
 scripts/feature_extraction_script/returns3
 scripts/feature_extraction_script/returns4
